# ML_DL_Projects

./: app.py  pyproject.toml  requirements.txt
notebook/: 1. EDA Stud.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/components/artifact/: model.pkl  preprocessor.pkl
src/components/catboost_info/: catboost_training.json  time_left.tsv
src/components/catboost_info/learn/: events.out.tfevents
src/pipeline/: predict_pipeline.py
templates/: home.html
